--- a/style/styles.css
+++ b/style/styles.css
@@ -3,8 +3,8 @@ html {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background-color: #efd7ff;
-    color: #004014
+    background-color: #300127;
+    color: #d5c4dc
 }
 
 body {
@@ -64,7 +64,7 @@ section {
 }
 
 hr {
-    border: 4px solid #333;
+    border: 4px solid #d5c4dc;
     margin: 4rem 0;
     padding: 0;
 }
@@ -78,7 +78,7 @@ hr {
 }
 
 .standard-details {
-    font-weight: 500;
+    font-weight: 400;
     font-size: var(--step-0);
     list-style: none;
     padding: 0;
@@ -86,7 +86,7 @@ hr {
 }
 
 .standards li, .standard-details li {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .rationale-details {
