--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: light dark;
+  }
+
 html {
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
@@ -6,6 +10,21 @@ html {
     background-color: #300127;
     color: #d5c4dc
 }
+
+@media (prefers-color-scheme: dark) {
+    html {
+        background-color: #300127;
+        color: #d5c4dc
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    html {
+        background-color: #d5c4dc;
+        color: #300127
+    }
+}
+
 
 body {
     padding: 2rem;
@@ -67,6 +86,18 @@ hr {
     border: 4px solid #d5c4dc;
     margin: 4rem 0;
     padding: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+    hr {
+        border: 4px solid #d5c4dc;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    hr {
+        border: 4px solid #300127;
+    }
 }
 
 /* Lists */
