--- a/style/styles.css
+++ b/style/styles.css
@@ -23,7 +23,7 @@
 
 
 html {
-    font-family: "Rubik", sans-serif;
+    font-family: "Figtree", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
